<resources>
    <string name="app_name">SocialTEA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login_titulo">Login</string>
    <string name="login_email">E-mail</string>
    <string name="login_pwd">Senha</string>
    <string name="login_btn">Login</string>
    <string name="login_cadastro">Cadastre-se</string>
    <string name="cadUser_titulo">Usuário Responsável</string>
    <string name="login_cpwd">Confirme sua Senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadHistSoc">Nova História</string>
    <string name="listHistSoc">Listar Histórias Sociais</string>
    <string name="visualHistSoc">Visualizar História Social</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="textoHistoria">Texto da história social</string>
    <string name="S">Imagem</string>
    <string name="tituloHistoria">Título da história social.</string>
    <string name="btnExcluir">Excluir</string>
    <string name="btnEditar">Editar</string>
    <string name="seqHistoria">Sequência em que imagem aparecerá na história</string>
    <string name="btnVisualizar">Visualizar História</string>
    <string name="btnVisualizar2">Visualizar</string>
    <string name="url">Url</string>
    <string name="editHistSoc">Editar História Social</string>
    <string name="action_sobre">Sobre</string>
    <string name="ok">Ok</string>
    <string name="sobre">Este trabalho tem como objetivo construir um aplicativo para auxílio de crianças autistas com o desenvolvimento de atividades de vida diárias e habilidades sociais. Esse aplicativo apresentara lista de exercícios de modulação relacionados com atividades diárias e habilidades sociais apresentados por meio de uma história social contextualizando-os e uma segunda parte que deve ser realizada com o auxílio de um responsável pela criança. Um exemplo de exercício seria iniciado com uma história social que fala sobre contato visual e a segunda parte seria o exercício que deve ser realizado com a criança com o auxílio do responsável.</string>
    <string name="cancelar">Cancelar</string>
    <string name="nav_header_subtitle2">gonkaschessoff@gmail.com</string>
    <string name="nav_header_title2"><![CDATA[A&D]]></string>
    <string name="sitesreferencias">Este projeto tem como objetivo servir como suporte no desenvolvimento de crianças com autismo.</string>
    <string name="site1">neuroconecta.com.br</string>
    <string name="site2">www.inspiradospeloautismo.com.br</string>
    <string name="listExercicios">Exercícios</string>
    <string name="login_cpf">CPF</string>
    <string name="login_nome">Nome</string>
    <string name="cadUsuarioLeitor">Novo Leitor</string>
    <string name="cad_user_leitor_titulo">Usuario Leitor</string>
    <string name="leitores">Leitores</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="bancoHistorias">Banco de Histórias</string>
    <string name="suasHistorias">Minhas Histórias</string>
    <string name="btnAvancar">Avançar</string>
    <string name="numImagensHistoria">Número de imagens que deseja na história</string>
    <string name="btnSelecionarImg">Selecionar Imagens</string>
    <string name="categoriasAvd">Atividades de vida Diária</string>
    <string name="categoriasHs">Habilidades Sociais</string>
    <string name="vincularBancoHistSoc">Associar HS-Banco</string>
    <string name="desvincularBancoHistSoc">Desassociar HS-Banco</string>
    <string name="vincularHistSoc">Associar HS</string>
    <string name="desvincularHistSoc">Desassociar HS</string>
    <string name="suasHistoriasBanco">Minhas Histórias Banco</string>
    <string name="action_sair">Sair</string>
    <string name="editHistSocBanco">Editar História Banco de Histórias</string>

    <string-array name="itensAtividadeVidaDiariaNome">
        <item>Nenhum</item>
        <item>Higiene</item>
        <item>Alimentação</item>
        <item>Autocuidado</item>
    </string-array>

    <string-array name="itensAtividadeVidaDiariaDescricao">
        <item>Nenhum</item>
        <item>Higiene</item>
        <item>Alimentação</item>
        <item>Autocuidado</item>
    </string-array>

    <string-array name="itensHabilidadeSocialNome">
        <item>Nenhum</item>
        <item>Contato Visual</item>
        <item>Linguagem Corporal</item>
        <item>Emoções</item>
        <item>Comunicação</item>
    </string-array>
    <string-array name="itensHabilidadeSocialDescricao">
        <item>Nenhum</item>
        <item>Contato Visual</item>
        <item>Linguagem Corporal</item>
        <item>Emoções</item>
        <item>Comunicação</item>
    </string-array>
</resources>