<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fragment_historia_social_cad"
            android:icon="@drawable/ic_baseline_add_circle_outline_24"
            android:title="@string/cadHistSoc" />
        <item
            android:id="@+id/nav_fragment_historia_social_List"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/listHistSoc" />
        <item
            android:id="@+id/nav_fragment_exercicio_List"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/listExercicios" />

    </group>
</menu>