<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CadastroUsuarioLeitorFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad_user_leitor_titulo"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin2"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNomeUsuarioLeitorVinculado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_nome"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCpfUsuarioLeitorVinculado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_cpf"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailUsuarioLeitorVinculado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSenhaUsuarioLeitorVinculado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfSenhaUsuarioLeitorVinculado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_cpwd"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrarUsuarioLeitorVinculado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin4"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btnCadastrar" />

        <Button
            android:id="@+id/btnCancelarUsuarioLeitorVinculado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin4"
            android:gravity="center"
            android:text="@string/btnCancelar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>