<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projetofinalpw3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_fragment_historia_social_cad"
        android:name="com.example.projetofinalpw3.fragment.CadastroHistoriaSocialFragment"
        android:label="@string/cadHistSoc"
        tools:layout="@layout/fragment_historia_social_cadastrar"/>
    <fragment
        android:id="@+id/nav_fragment_historia_social_List"
        android:name="com.example.projetofinalpw3.fragment.ListaHistoriaSocialFragment"
        android:label="@string/listHistSoc"
        tools:layout="@layout/fragment_historia_social_lista">
    </fragment>
    <fragment
        android:id="@+id/nav_fragment_historia_social_Visualizar"
        android:name="com.example.projetofinalpw3.fragment.VisualizarHistoriaSocialFragment"
        android:label="@string/visualHistSoc"
        tools:layout="@layout/fragment_historia_social_visualizar">
    </fragment>
    <fragment
        android:id="@+id/nav_fragment_historia_social_Edit"
        android:name="com.example.projetofinalpw3.fragment.EditarHistoriaSocialFragment"
        android:label="@string/editHistSoc"
        tools:layout="@layout/fragment_historia_social_editar"/>
    <activity
        android:id="@+id/nav_login_activity"
        android:name="com.example.projetofinalpw3.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/nav_cad_usuario_activity"
        android:name="com.example.projetofinalpw3.CadUsuarioActivity"
        android:label="Cadastro Usuário Responsável"
        tools:layout="@layout/activity_cad_usuario" />
    <fragment
        android:id="@+id/nav_fragment_cadastro_usuario_leitor"
        android:name="com.example.projetofinalpw3.fragment.CadastroUsuarioLeitorFragment"
        android:label="@string/cadUsuarioLeitor"
        tools:layout="@layout/fragment_cadastro_usuario_leitor"/>
    <fragment
        android:id="@+id/nav_lista_usuario_leitor_fragment"
        android:name="com.example.projetofinalpw3.fragment.ListaUsuarioLeitorFragment"
        android:label="Lista usuário Leitor"
        tools:layout="@layout/fragment_lista_usuario_leitor" />
    <fragment
        android:id="@+id/nav_editar_usuario_leitor_fragment"
        android:name="com.example.projetofinalpw3.fragment.EditarUsuarioLeitorFragment"
        android:label="Editar usuário Leitor"
        tools:layout="@layout/fragment_editar_usuario_leitor" />
    <fragment
        android:id="@+id/nav_visualizar_usuario_leitor_fragment"
        android:name="com.example.projetofinalpw3.fragment.VisualizarUsuarioLeitorFragment"
        android:label="Visualizar usuário Leitor"
        tools:layout="@layout/fragment_visualizar_usuario_leitor" />
    <fragment
        android:id="@+id/nav_banco_historias_fragment"
        android:name="com.example.projetofinalpw3.fragment.ListaBancoDeHistoriaSocialFragment"
        android:label="Lista Banco de histórias"
        tools:layout="@layout/fragment_lista_historias_associar" />
    <fragment
        android:id="@+id/listaHistoriaAssociarFragment"
        android:name="com.example.projetofinalpw3.fragment.ListaHistoriaAssociarFragment"
        android:label="fragment_lista_historias_associar"
        tools:layout="@layout/fragment_lista_historias_associar" />
    <fragment
        android:id="@+id/visualizarBancoDeHistoriaSocialFragment"
        android:name="com.example.projetofinalpw3.fragment.VisualizarBancoDeHistoriaSocialFragment"
        android:label="fragment_visualizar_banco_de_historia_social"
        tools:layout="@layout/fragment_visualizar_banco_de_historia_social" />
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.projetofinalpw3.ui.gallery.GalleryFragment"
        android:label="fragment_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/slideshowFragment"
        android:name="com.example.projetofinalpw3.ui.slideshow.SlideshowFragment"
        android:label="fragment_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.projetofinalpw3.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />


</navigation>